--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                             <strong>Próximas Provas:</strong> 14/05 - Português e Física
                                         </div>
                                         <div class="alert alert-warning">
-                                            <strong>Separar materias para aula de física:</strong> Massinha de modelar, 5 moedas de 5 centavos, 5 clipes e pilha de 9 volts (data não marcada)
+                                            <strong>Separar materias para aula de física:</strong> calculadora a bateria AA ou AAA, 5 moedas de 5 centavos, 5 clipes e 2 batatas (amanhã  dia 16/05)
                                         </div>
                                     </div>
                                 </div>
