--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                             </div>
                             <div class="atualidade-content">
                                 <h4>Você está limpando sua garrafa de água o suficiente? Entenda a melhor forma de fazer isso</h4>
-                                <img src="Atualidades/att1.jpg" alt="garrafakkkkjk" class="imgnot"><br>
+                                <img src="att1.jpg" alt="garrafakkkkjk" class="imgnot"><br>
                                 <p>Carl Behnke é especialista em segurança alimentar da
 Universidade Purdue em Indiana, nos Estados Unidos.
 Ele sempre se perguntava se a sua garrafa
