--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                                 <strong>Livro 13:</strong> Formação Geral Básica
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Capítulo 12:</strong> Europa, Estados Unidos e Brasil em meados do Sec XIX
+                                                <strong>Capítulo 13:</strong> Europa, Estados Unidos e Brasil em meados do Sec XIX
                                             </li>
                                             <li class="list-group-item">
                                                 <strong>Páginas:</strong> 235 à 241
@@ -313,7 +313,7 @@
                                 <div class="card-footer">
                                     <div class="d-flex justify-content-between">
                                         <span class="badge bg-success">Prova Padrão</span>
-                                        <span class="badge bg-info">Atualidade: JULIANA</span>
+                                        <span class="badge bg-info">Atualidade: JULIANNA</span>
                                     </div>
                                 </div>
                             </div>
@@ -345,7 +345,7 @@
                                 <div class="card-footer">
                                     <div class="d-flex justify-content-between">
                                         <span class="badge bg-success">Prova Padrão</span>
-                                        <span class="badge bg-info">Atualidade: JULIANA</span>
+                                        <span class="badge bg-info">Atualidade: JULIANNA</span>
                                     </div>
                                 </div>
                             </div>
@@ -436,10 +436,10 @@
                         <div class="card-body">
                             <div class="atualidade-info mb-3">
                                 <span class="badge bg-primary mb-2">Matéria: Química</span>
-                                <h6>Responsáveis: ANTONIO JR</h6>
+                                <h6>Responsáveis: JULIANNA</h6>
                             </div>
                             <div class="atualidade-content">
-                                <h4>Você está limpando sua garrafa de água o suficiente? Entenda a melhor forma de fazer isso</h4>
+                                <h4>Universo deve acabar antes do que os cientistaspensavam; entenda</h4>
                                 <img src="att1.jpg" alt="cosmos" class="imgnot"><br>
                                 <p>Cientistas descobriram que o Universo pode acabar antes do que os cálculos previam. A
 equipe de pesquisadores disse que o fim do cosmos deve chegar em cerca de 10⁷⁸ anos
