--- a/index.html
+++ b/index.html
@@ -170,19 +170,7 @@
                                             <p class="card-text">Anpalise dos experimentos realizados em sala de aula.</p>
                                             <div class="d-flex justify-content-between">
                                                 <span class="badge bg-info">Relatório</span>
-                                                <span class="badge bg-danger">Entrega: 26/05</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    
-                                    <div class="card mb-3">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Entrega dos eletroscópios</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Matéria: Física</h6>
-                                            <p class="card-text">Entrega do eletroscópio solicitado pelo professor Anderson.</p>
-                                            <div class="d-flex justify-content-between">
-                                                <span class="badge bg-info">Projeto prático</span>
-                                                <span class="badge bg-danger">Entrega: 26/05</span>
+                                                <span class="badge bg-danger">Entrega: a marcar</span>
                                             </div>
                                         </div>
                                     </div>
@@ -227,12 +215,12 @@
                                 <div class="accordion-body">
                                     <div class="card mb-3">
                                         <div class="card-body">
-                                            <h5 class="card-title">Ciclo Trigonométrico</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Matéria: Arte de morar</h6>
-                                            <p class="card-text">Construção de um ciclo trigonométrico supervisionado pela professora Taiane.</p>
+                                            <h5 class="card-title">Linha evolutiva</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Matéria: Cosmos do Micro ao Macro</h6>
+                                            <p class="card-text">Confecção de uma linha evolutiva de filos de invertebrados na forma de diagrama, fluxograma ou esquema.</p>
                                             <div class="d-flex justify-content-between">
-                                                <span class="badge bg-info">Projeto Prático</span>
-                                                <span class="badge bg-danger">Confecção: 27/05</span>
+                                                <span class="badge bg-info">Atividade</span>
+                                                <span class="badge bg-danger">Confecção: 03/06</span>
                                             </div>
                                         </div>
                                     </div>
@@ -329,7 +317,7 @@
                                             <li class="list-group-item">
                                                 <strong>Observações:</strong> Estudar pela lista
                                             </li>
-                                            <h6 class="text-primary">Padrão:</h6>
+                                            <h6 class="text-primary">Adaptada:</h6>
                                         <ul class="list-group list-group-flush mb-3">
                                             <li class="list-group-item">
                                                 <strong>Livro 11, 12:</strong> Formação Geral Básica
@@ -440,8 +428,8 @@
                         </div>
                         <div class="card-body">
                             <div class="atualidade-info mb-3">
-                                <span class="badge bg-primary mb-2">Matéria: Química</span>
-                                <h6>Responsáveis: JULIANNA</h6>
+                                <span class="badge bg-primary mb-2">Matéria: Inglês</span>
+                                <h6>Responsáveis: ALAN</h6>
                             </div>
                             <div class="atualidade-content">
                                 <h4>A era da inteligência artificial</h4>
@@ -452,7 +440,7 @@ financeiras e avaliar os riscos de uma empresa a partir de consultas de megadado
 tarefas, antes feitas por nós, humanos, já podem ser executadas com inteligência artificial, a IA.
 Mas, afinal, como definir essa tecnologia que está mudando nosso mundo e promete transformar
 mais ainda nossa sociedade?<br>
-                                    <img src="att1.jpg" alt="cosmos" class="imgnot"><br>
+                                    <img src="att1.jpg" alt="IA" class="imgnot"><br>
 São várias as definições da IA. Uma delas a descreve como a atividade dedicada a tornar as
 máquinas inteligentes, e inteligência é a qualidade que permite que uma entidade funcione
 adequadamente e com previsão em seu ambiente. Ainda que não tenhamos uma definição exata,
