--- a/index.html
+++ b/index.html
@@ -267,21 +267,30 @@
                             <!-- Primeira Prova da Semana -->
                             <div class="card mb-4">
                                 <div class="card-header bg-primary text-white">
-                                    <h5 class="mb-0">1ª AV 3 - MATEMÁTICA (30/05)</h5>
+                                    <h5 class="mb-0">1ª AV 4 - FÍSICA (07/06)</h5>
                                 </div>
                                 <div class="card-body">
                                     <div class="exam-info">
-                                        <h6 class="text-primary">Padrão e adaptada:</h6>
+                                        <h6 class="text-primary">Padrão:</h6>
                                         <ul class="list-group list-group-flush mb-3">
                                             <li class="list-group-item">
                                                 <strong>Livro 13:</strong> Formação Geral Básica
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Capítulo 16, 17:</strong> Análise combinatória, Teorema dos cossenos
+                                                <strong>Capítulo 16:</strong> Eletrodinâmica (prte 1)
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Páginas:</strong> 5 à 29
+                                                <strong>Páginas:</strong> 52 à 65
                                             </li>
+                                            <li class="list-group-item">
+                                                <strong>Observação:</strong> + Acossiação de resistores (livro 14 digital)
+                                            </li>
+                                        </ul>
+                                        <h6 class="text-primary">Adaptada:</h6>
+                                        <ul class="list-group list-group-flush mb-3">
+                                            <li class="list-group-item">
+                                                <strong>Observação:</strong> Eletrodinâmica: Associação de resistores, 1 lei de ohm, potencia 
+elétrica e energia elétrica.                                              </li>
                                         </ul>
                                         
                                     </div>
@@ -289,7 +298,7 @@
                                 <div class="card-footer">
                                     <div class="d-flex justify-content-between">
                                         <span class="badge bg-success">Prova Padrão</span>
-                                        <span class="badge bg-info">Atualidade: ALAN</span>
+                                        <span class="badge bg-info">Atualidade: ANDERSON</span>
                                     </div>
                                 </div>
                             </div>
@@ -299,37 +308,29 @@
                             <!-- Segunda Prova da Semana -->
                             <div class="card mb-4">
                                 <div class="card-header bg-primary text-white">
-                                    <h5 class="mb-0">1ª AV 3 - INGLÊS (30/05)</h5>
+                                    <h5 class="mb-0">1ª AV 4 - PORTUGÛES (07/06)</h5>
                                 </div>
                                 <div class="card-body">
                                     <div class="exam-info">
-                                        <h6 class="text-primary">Padrão:</h6>
+                                        <h6 class="text-primary">Padrão e adaptada:</h6>
                                         <ul class="list-group list-group-flush mb-3">
                                             <li class="list-group-item">
-                                                <strong>Livro 11, 12, 13:</strong> Formação Geral Básica
+                                                <strong>Livro 11:</strong> Formação Geral Básica
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Capítulo 31, 32, 34, 36:</strong> Present Perfect, linking words, past perfect
+                                                <strong>Capítulo 25:</strong> Parnasianismo
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Páginas:</strong> 200 à 219 (L.11), 197 à 226 (L. 12), 196 à 206 (L.13)
+                                                <strong>Páginas:</strong> 167 à 173
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Observações:</strong> Estudar pela lista
-                                            </li>
-                                            <h6 class="text-primary">Adaptada:</h6>
-                                        <ul class="list-group list-group-flush mb-3">
-                                            <li class="list-group-item">
-                                                <strong>Livro 11, 12:</strong> Formação Geral Básica
+                                                <strong>Livro 12:</strong> Formação Geral Básica
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Capítulo 31, 32, 34:</strong> Present Perfect, linking words
+                                                <strong>Capítulo 14:</strong> Termos integrantes da oração
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Páginas:</strong> 200 à 219 (L.11), 197 à 226 (L. 12)
-                                            </li>
-                                            <li class="list-group-item">
-                                                <strong>Observações:</strong> Estudar pela lista
+                                                <strong>Páginas:</strong> 131 à 144
                                             </li>
                                         </ul>
                                         
@@ -338,7 +339,7 @@
                                 <div class="card-footer">
                                     <div class="d-flex justify-content-between">
                                         <span class="badge bg-success">Prova Padrão</span>
-                                        <span class="badge bg-info">Atualidade: ALAN</span>
+                                        <span class="badge bg-info">Atualidade: ANDERSON</span>
                                     </div>
                                 </div>
                             </div>
