--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                                     </div>
                                     <div class="card-body">
                                         <div class="alert alert-info">
-                                            <strong>Próximas Provas:</strong> 14/05 - Português e Física
+                                            <strong>Próximas Provas:</strong> 14/05 - Biologia + Química
                                         </div>
                                         <div class="alert alert-warning">
-                                            <strong>Separar materias para aula de física:</strong> Massinha de modelar, 5 moedas de 5 centavos, 5 clipes e pilha de 9 volts (data não marcada)
+                                            <strong>Férias de Junho:</strong> O Recesso Junino irá começar dia 21
                                         </div>
                                     </div>
                                 </div>
@@ -170,7 +170,7 @@
                                             <p class="card-text">Anpalise dos experimentos realizados em sala de aula.</p>
                                             <div class="d-flex justify-content-between">
                                                 <span class="badge bg-info">Relatório</span>
-                                                <span class="badge bg-danger">Entrega: a marcar</span>
+                                                <span class="badge bg-danger">Entrega: 16/06</span>
                                             </div>
                                         </div>
                                     </div>
@@ -182,19 +182,7 @@
                                             <p class="card-text">Realização do fichamento que irá ser avaliado durante a unidade.</p>
                                             <div class="d-flex justify-content-between">
                                                 <span class="badge bg-info">Fichamento</span>
-                                                <span class="badge bg-danger">Entrega: N/A</span>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="card mb-3">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Atividade avaliativa</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Matéria: Sociologia</h6>
-                                            <p class="card-text">Composição do dossiê sobre o filme "O menino que descobriu o vento".</p>
-                                            <div class="d-flex justify-content-between">
-                                                <span class="badge bg-info">Dossiê</span>
-                                                <span class="badge bg-danger">Entrega: 09/06</span>
+                                                <span class="badge bg-danger">Entrega: 11/06</span>
                                             </div>
                                         </div>
                                     </div>
@@ -217,10 +205,10 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Linha evolutiva</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Matéria: Cosmos do Micro ao Macro</h6>
-                                            <p class="card-text">Confecção de uma linha evolutiva de filos de invertebrados na forma de diagrama, fluxograma ou esquema.</p>
+                                            <p class="card-text">Visto das resoluções das perguntas solicitadas em aula.</p>
                                             <div class="d-flex justify-content-between">
                                                 <span class="badge bg-info">Atividade</span>
-                                                <span class="badge bg-danger">Confecção: 03/06</span>
+                                                <span class="badge bg-danger">Confecção: 010/06</span>
                                             </div>
                                         </div>
                                     </div>
@@ -267,30 +255,24 @@
                             <!-- Primeira Prova da Semana -->
                             <div class="card mb-4">
                                 <div class="card-header bg-primary text-white">
-                                    <h5 class="mb-0">1ª AV 4 - FÍSICA (07/06)</h5>
+                                    <h5 class="mb-0">2ª AV 3 - BIOLOGÍA (12/06)</h5>
                                 </div>
                                 <div class="card-body">
                                     <div class="exam-info">
                                         <h6 class="text-primary">Padrão:</h6>
                                         <ul class="list-group list-group-flush mb-3">
                                             <li class="list-group-item">
-                                                <strong>Livro 13:</strong> Formação Geral Básica
+                                                <strong>Livro ?:</strong> Formação Geral Básica
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Capítulo 16:</strong> Eletrodinâmica (prte 1)
+                                                <strong>Capítulo ?:</strong> ?
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Páginas:</strong> 52 à 65
+                                                <strong>Páginas:</strong> ?
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Observação:</strong> + Acossiação de resistores (livro 14 digital)
+                                                <strong>Observação:</strong> 
                                             </li>
-                                        </ul>
-                                        <h6 class="text-primary">Adaptada:</h6>
-                                        <ul class="list-group list-group-flush mb-3">
-                                            <li class="list-group-item">
-                                                <strong>Observação:</strong> Eletrodinâmica: Associação de resistores, 1 lei de ohm, potencia 
-elétrica e energia elétrica.                                              </li>
                                         </ul>
                                         
                                     </div>
@@ -298,7 +280,7 @@ elétrica e energia elétrica.                                              </li
                                 <div class="card-footer">
                                     <div class="d-flex justify-content-between">
                                         <span class="badge bg-success">Prova Padrão</span>
-                                        <span class="badge bg-info">Atualidade: ANDERSON</span>
+                                        <span class="badge bg-info">Atualidade: LIS</span>
                                     </div>
                                 </div>
                             </div>
@@ -308,7 +290,7 @@ elétrica e energia elétrica.                                              </li
                             <!-- Segunda Prova da Semana -->
                             <div class="card mb-4">
                                 <div class="card-header bg-primary text-white">
-                                    <h5 class="mb-0">1ª AV 4 - PORTUGÛES (07/06)</h5>
+                                    <h5 class="mb-0">2ª AV 3 - QUÍMICA (12/06)</h5>
                                 </div>
                                 <div class="card-body">
                                     <div class="exam-info">
@@ -318,19 +300,10 @@ elétrica e energia elétrica.                                              </li
                                                 <strong>Livro 11:</strong> Formação Geral Básica
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Capítulo 25:</strong> Parnasianismo
+                                                <strong>Capítulo 9:</strong> Reações Químicas
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Páginas:</strong> 167 à 173
-                                            </li>
-                                            <li class="list-group-item">
-                                                <strong>Livro 12:</strong> Formação Geral Básica
-                                            </li>
-                                            <li class="list-group-item">
-                                                <strong>Capítulo 14:</strong> Termos integrantes da oração
-                                            </li>
-                                            <li class="list-group-item">
-                                                <strong>Páginas:</strong> 131 à 144
+                                                <strong>Páginas:</strong> 70 à 79
                                             </li>
                                         </ul>
                                         
@@ -339,7 +312,7 @@ elétrica e energia elétrica.                                              </li
                                 <div class="card-footer">
                                     <div class="d-flex justify-content-between">
                                         <span class="badge bg-success">Prova Padrão</span>
-                                        <span class="badge bg-info">Atualidade: ANDERSON</span>
+                                        <span class="badge bg-info">Atualidade: LIS</span>
                                     </div>
                                 </div>
                             </div>
