Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     </div>
                                     <div class="card-body">
                                         <div class="alert alert-info">
-                                            <strong>Próximas Provas:</strong> 14/05 - Biologia + Química
+                                            <strong>Próximas Provas:</strong> 18/06 - História + Geografia
                                         </div>
                                         <div class="alert alert-warning">
                                             <strong>Férias de Junho:</strong> O Recesso Junino irá começar dia 21
@@ -255,23 +255,23 @@
                             <!-- Primeira Prova da Semana -->
                             <div class="card mb-4">
                                 <div class="card-header bg-primary text-white">
-                                    <h5 class="mb-0">2ª AV 3 - BIOLOGÍA (12/06)</h5>
+                                    <h5 class="mb-0">2ª AV 4 - HISTÓRIA (18/06)</h5>
                                 </div>
                                 <div class="card-body">
                                     <div class="exam-info">
                                         <h6 class="text-primary">Padrão:</h6>
                                         <ul class="list-group list-group-flush mb-3">
                                             <li class="list-group-item">
-                                                <strong>Livro ?:</strong> Formação Geral Básica
+                                                <strong>Livro 13:</strong> Formação Geral Básica
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Capítulo ?:</strong> ?
+                                                <strong>Capítulo 13:</strong> Europa, Estados Unidos e Brasil em meados do século XIX
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Páginas:</strong> ?
+                                                <strong>Páginas:</strong> 228 à 247
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Observação:</strong> 
+                                                <strong>Observação:</strong> Estudar pelos slides
                                             </li>
                                         </ul>
                                         
@@ -280,7 +280,7 @@
                                 <div class="card-footer">
                                     <div class="d-flex justify-content-between">
                                         <span class="badge bg-success">Prova Padrão</span>
-                                        <span class="badge bg-info">Atualidade: LIS</span>
+                                        <span class="badge bg-info">Atualidade: EDNALDO</span>
                                     </div>
                                 </div>
                             </div>
@@ -290,20 +290,20 @@
                             <!-- Segunda Prova da Semana -->
                             <div class="card mb-4">
                                 <div class="card-header bg-primary text-white">
-                                    <h5 class="mb-0">2ª AV 3 - QUÍMICA (12/06)</h5>
+                                    <h5 class="mb-0">2ª AV 4 - GEOGRAFIA (18/06)</h5>
                                 </div>
                                 <div class="card-body">
                                     <div class="exam-info">
                                         <h6 class="text-primary">Padrão e adaptada:</h6>
                                         <ul class="list-group list-group-flush mb-3">
                                             <li class="list-group-item">
-                                                <strong>Livro 11:</strong> Formação Geral Básica
+                                                <strong>Livro 13:</strong> Formação Geral Básica
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Capítulo 9:</strong> Reações Químicas
+                                                <strong>Capítulo 26:</strong> Industrialização na Europa e America do Norte
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Páginas:</strong> 70 à 79
+                                                <strong>Páginas:</strong> ? - ?
                                             </li>
                                         </ul>
                                         
@@ -312,7 +312,7 @@
                                 <div class="card-footer">
                                     <div class="d-flex justify-content-between">
                                         <span class="badge bg-success">Prova Padrão</span>
-                                        <span class="badge bg-info">Atualidade: LIS</span>
+                                        <span class="badge bg-info">Atualidade: EDNALDO</span>
                                     </div>
                                 </div>
                             </div>
