Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                                 <strong>Capítulo 26:</strong> Industrialização na Europa e America do Norte
                                             </li>
                                             <li class="list-group-item">
-                                                <strong>Páginas:</strong> ? - ?
+                                                <strong>Páginas:</strong> 257 à 272
                                             </li>
                                         </ul>
                                         
